--- a/pupils/templates/users/datos_padre.html
+++ b/pupils/templates/users/datos_padre.html
@@ -43,7 +43,7 @@
 	<div class="span4">
 		<div class="paddingleft10">
 			<h4>Salir</h4>
-			<a href="{% url logout %}"><img title="Salir" title="pdf" src="{{ MEDIA_URL}}/img/exit.png" /></a>
+			<a href="{% url 'logout' %}"><img title="Salir" title="pdf" src="{{ MEDIA_URL}}/img/exit.png" /></a>
 		</div>
 	</div>
 </div>
