--- a/pupils/templates/users/panel_control_hijo.html
+++ b/pupils/templates/users/panel_control_hijo.html
@@ -2,21 +2,21 @@
 	<div class="span4">
 		<div class="paddingleft10">
 			<h4>Añadir trabajo</h4>
-			<a href="{% url tablon_nuevo_post %}"><img title="Añadir trabajo" title="pdf" src="{{ MEDIA_URL}}/img/add.png" /></a>
+			<a href="{% url 'tablon_nuevo_post' %}"><img title="Añadir trabajo" title="pdf" src="{{ MEDIA_URL}}/img/add.png" /></a>
 		</div>
 	</div>
 	<div class="span4">
 		<div class="paddingleft10">
 			<div class="paddingleft10">
 				<h4>Mis trabajos</h4>
-			    <a href="{% url tablon_home %}"><img title="Ver mis trabajos" width="64" height="64" src="{{ MEDIA_URL}}/img/learn.png" /></a>
+			    <a href="{% url 'tablon_home' %}"><img title="Ver mis trabajos" width="64" height="64" src="{{ MEDIA_URL}}/img/learn.png" /></a>
 		    </div>
 		</div>
 	</div>
 	<div class="span4">
 		<div class="paddingleft10">
 			<h4>Imprimir diploma</h4>
-			<a href="{% url diploima_pdf %}"><img title="Imprimir diploma" title="pdf" width="64" src="{{ MEDIA_URL}}/img/pdf.png" /></a>
+			<a href="{% url 'diploima_pdf' %}"><img title="Imprimir diploma" title="pdf" width="64" src="{{ MEDIA_URL}}/img/pdf.png" /></a>
 		</div>
 	</div>
 	<div class="span4">
@@ -29,7 +29,7 @@
 	<div class="span4">
 		<div class="paddingleft10">
 			<h4>Salir</h4>
-			<a href="{% url logout %}"><img title="Salir" title="pdf" src="{{ MEDIA_URL}}/img/exit.png" /></a>
+			<a href="{% url 'logout' %}"><img title="Salir" title="pdf" src="{{ MEDIA_URL}}/img/exit.png" /></a>
 		</div>
 	</div>
 </div>
