--- a/pupils/templates/users/panel_control_padre.html
+++ b/pupils/templates/users/panel_control_padre.html
@@ -15,14 +15,14 @@
 		<div class="paddingleft10">
 			<div class="paddingleft10">
 				<h4>Ver actividades del hijo</h4>
-			    <a href="{% url tablon_home %}"><img title="Ver actividades del hijo" width="64" height="64" src="{{ MEDIA_URL}}/img/learn.png" /></a>
+			    <a href="{% url 'tablon_home' %}"><img title="Ver actividades del hijo" width="64" height="64" src="{{ MEDIA_URL}}/img/learn.png" /></a>
 		    </div>
 		</div>
 	</div>
 	<div class="span4">
 		<div class="paddingleft10">
 			<h4>Encuesta</h4>
-			<a href="{% url encuesta %}"><img title="Encuesta" title="pdf" width="64" height="64" src="{{ MEDIA_URL}}/img/encuesta_128x128.png" /></a>
+			<a href="{% url 'encuesta' %}"><img title="Encuesta" title="pdf" width="64" height="64" src="{{ MEDIA_URL}}/img/encuesta_128x128.png" /></a>
 			
 		</div>
 	</div>
@@ -36,7 +36,7 @@
 	<div class="span4">
 		<div class="paddingleft10">
 			<h4>Salir</h4>
-			<a href="{% url logout %}"><img title="Salir" title="pdf" src="{{ MEDIA_URL}}/img/exit.png" /></a>
+			<a href="{% url 'logout' %}"><img title="Salir" title="pdf" src="{{ MEDIA_URL}}/img/exit.png" /></a>
 		</div>
 	</div>
 </div>
