--- a/pupils/templates/encuesta/encuestas.html
+++ b/pupils/templates/encuesta/encuestas.html
@@ -14,7 +14,7 @@
     {% for l in lista_encuestas %}
         <div class="row offset3">
             
-             <a href="{{ url rellenar_encuesta }}">{{ l.titulo }}</a>
+             <a href="{ url 'rellenar_encuesta' }">{{ l.titulo }}</a>
             
         </div>
     {% endfor %}
